@@ -18,8 +18,11 @@ package org.cloudfoundry.maven;
 import java.io.File;
 import java.net.URI;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
+import org.cloudfoundry.client.lib.CloudApplication;
 import org.cloudfoundry.maven.common.DefaultConstants;
 import org.cloudfoundry.maven.common.SystemProperties;
 
@@ -73,6 +76,21 @@ abstract class AbstractApplicationAwareCloudFoundryMojo extends
      */
     private String services;
 
+
+    /**
+     * Framework type, defaults to CloudApplication.Spring
+     *
+     * @parameter expression="${cf.framework}" default-value="spring"
+     */
+    private String framework;
+
+    /**
+     * Environment variables
+     *
+     * @parameter expression="${cf.env}"
+     */
+    private Map<String, String> env = new HashMap<String, String>();
+
     /**
      * Do not auto-start the application
      *
@@ -104,6 +122,44 @@ abstract class AbstractApplicationAwareCloudFoundryMojo extends
         }
 
     }
+
+    /**
+     * If the framework was specified via the command line ({@link SystemProperties})
+     * then use that property. Otherwise return the framework as injected via Maven or
+     * if framework is Null return the default value (CloudApplication.Spring) instead.
+     *
+     * @return Returns the framework, will never return Null.
+     */
+    public String getFramework() {
+
+        final String frameworkProperty = getCommandlineProperty(SystemProperties.FRAMEWORK);
+
+        if (frameworkProperty != null) {
+            return frameworkProperty;
+        }
+
+        return this.framework;
+    }
+
+
+    /**
+     * Environment properties can only be specified from the maven pom.
+     *
+     * Example:
+     *
+     * {code}
+     * <env>
+     *     <JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>
+     * </env>
+     * {code}
+     *
+     * @return Returns the env, will never return Null.
+     */
+    public Map<String,String> getEnv() {
+        return this.env;
+    }
+
+
 
     /**
      * If the application name was specified via the command line ({@link SystemProperties})
